--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,13 @@ jobs:
   build-and-test:
     runs-on: ubuntu-latest
     
+    outputs:
+      deb_file: ${{ steps.get_deb_name.outputs.deb_file }}
+      version: ${{ steps.get_version.outputs.version }}
+    
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0  # Важно для работы с тегами
       
     - name: Build DEB package
       run: |
@@ -34,19 +36,37 @@ jobs:
           "
         
         echo "=== Generated DEB package ==="
-        DEB_FILE=$(ls kubsh*.deb | head -1)
-        echo "DEB_FILE=$DEB_FILE" >> $GITHUB_ENV
         ls -la *.deb
         
+    - name: Get DEB file name
+      id: get_deb_name
+      run: |
+        DEB_FILE=$(ls kubsh*.deb | head -1)
+        echo "deb_file=$DEB_FILE" >> $GITHUB_OUTPUT
+        echo "DEB_FILE=$DEB_FILE" >> $GITHUB_ENV
+        
+    - name: Get version
+      id: get_version
+      run: |
         # Получаем версию из DEB файла или создаем
-        if [[ -f "VERSION" ]]; then
-          VERSION=$(cat VERSION)
+        DEB_FILE=$(ls kubsh*.deb | head -1)
+        if [[ -f "$DEB_FILE" ]]; then
+          # Пытаемся извлечь версию из имени файла
+          VERSION=$(echo "$DEB_FILE" | grep -oP '(?<=_)\d+\.\d+\.\d+(?=_)' || echo "1.0.0")
         elif [ -f Makefile ]; then
           VERSION=$(grep -i '^VERSION' Makefile | head -1 | awk -F= '{print $2}' | tr -d '[:space:]' || echo "1.0.0")
         else
           VERSION="1.0.0"
         fi
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "VERSION=$VERSION" >> $GITHUB_ENV
+      
+    - name: Upload DEB artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: kubsh-deb-package
+        path: kubsh*.deb
+        retention-days: 7
       
     - name: Create fixed test file for test 9
       run: |
@@ -170,19 +190,17 @@ jobs:
     needs: build-and-test
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # ОБЯЗАТЕЛЬНО для создания релиза
+      contents: write
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
       
-    - name: Download DEB from previous job
+    - name: Download DEB artifact
       uses: actions/download-artifact@v4
       with:
         name: kubsh-deb-package
-        run-id: ${{ needs.build-and-test.outputs.run_id }}
+        path: ./
         
     - name: Set up Git identity
       run: |
@@ -193,7 +211,7 @@ jobs:
       id: create_tag
       run: |
         # Используем семантическое версионирование с датой
-        VERSION="${{ needs.build-and-test.outputs.VERSION }}"
+        VERSION="${{ needs.build-and-test.outputs.version }}"
         if [ -z "$VERSION" ] || [ "$VERSION" = "1.0.0" ]; then
           DATE_TAG=$(date +%Y.%m.%d)
           COMMIT_HASH=$(git rev-parse --short HEAD)
@@ -207,9 +225,14 @@ jobs:
         git push origin "$TAG_NAME"
         
         echo "tag_name=$TAG_NAME" >> $GITHUB_OUTPUT
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
         echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
-        echo "VERSION=$VERSION" >> $GITHUB_ENV
+        
+    - name: Get DEB file name
+      id: get_deb
+      run: |
+        DEB_FILE=$(ls kubsh*.deb | head -1)
+        echo "DEB_FILE=$DEB_FILE" >> $GITHUB_ENV
+        echo "deb_file=$DEB_FILE" >> $GITHUB_OUTPUT
         
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
@@ -224,10 +247,10 @@ jobs:
           ### Installation
           ```bash
           # Download the DEB package
-          wget https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ needs.build-and-test.outputs.DEB_FILE }}
+          wget https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ steps.get_deb.outputs.deb_file }}
           
           # Install
-          sudo dpkg -i ${{ needs.build-and-test.outputs.DEB_FILE }}
+          sudo dpkg -i ${{ steps.get_deb.outputs.deb_file }}
           
           # Fix dependencies if needed
           sudo apt-get install -f
@@ -247,7 +270,7 @@ jobs:
         draft: false
         prerelease: false
         files: |
-          ${{ needs.build-and-test.outputs.DEB_FILE }}
+          ${{ steps.get_deb.outputs.deb_file }}
         token: ${{ secrets.GITHUB_TOKEN }}
       
     - name: Output release info
@@ -257,12 +280,12 @@ jobs:
         echo "=============================================="
         echo ""
         echo "Release: ${{ steps.create_tag.outputs.tag_name }}"
-        echo "DEB Package: ${{ needs.build-and-test.outputs.DEB_FILE }}"
+        echo "DEB Package: ${{ steps.get_deb.outputs.deb_file }}"
         echo ""
         echo "Download URL:"
-        echo "https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ needs.build-and-test.outputs.DEB_FILE }}"
+        echo "https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ steps.get_deb.outputs.deb_file }}"
         echo ""
         echo "Install with:"
-        echo "wget https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ needs.build-and-test.outputs.DEB_FILE }}"
-        echo "sudo dpkg -i ${{ needs.build-and-test.outputs.DEB_FILE }}"
+        echo "wget https://github.com/${{ github.repository }}/releases/download/${{ steps.create_tag.outputs.tag_name }}/${{ steps.get_deb.outputs.deb_file }}"
+        echo "sudo dpkg -i ${{ steps.get_deb.outputs.deb_file }}"
         echo "=============================================="
