--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,15 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build DEB package
+      id: build
       run: |
+        echo "=== Building kubsh ==="
         docker build -t kubsh-builder .
         docker run --rm -v $PWD:/workspace kubsh-builder bash -c "cd /workspace && make && make deb"
-        # Имя файла — просто kubsh.deb
-        DEB_FILE=$(ls kubsh*.deb | head -1)
-        cp "$DEB_FILE" kubsh.deb
-        echo "DEB_FILE=kubsh.deb" >> $GITHUB_ENV
+        # Просто проверяем, что файл создан, и фиксируем его имя
+        DEB_NAME=$(ls kubsh*.deb | head -1)
+        echo "DEB_NAME=$DEB_NAME" >> $GITHUB_ENV
+        echo "✅ Package built: $DEB_NAME"
 
     - name: Create GitHub Release
       uses: softprops/action-gh-release@v1
@@ -30,6 +32,7 @@ jobs:
         name: Release v1.0.0
         body: |
           Первый стабильный релиз kubsh.
+          
           ### Установка
           ```bash
           wget https://github.com/${{ github.repository }}/releases/download/v1.0.0/kubsh.deb
@@ -37,6 +40,7 @@ jobs:
           ```
         draft: false
         prerelease: false
-        files: kubsh.deb
+        # Ключевое исправление: указываем конкретное имя файла
+        files: ${{ env.DEB_NAME }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
